fix: thumbnail margin overflow

--- a/frontend/src/components/Thumbnail/Thumbnail.module.css
+++ b/frontend/src/components/Thumbnail/Thumbnail.module.css
@@ -4,9 +4,9 @@
   grid-template-rows: 1fr;
   align-items: center;
   column-gap: 80px;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 70px);
   padding: 50px 0;
-  margin: var(--content-margin);
+  margin: 0;
   position: relative;
 }
 
@@ -16,6 +16,7 @@
   align-items: center;
   gap: 10px;
   z-index: 1;
+  margin: 0 80px;
 }
 
 .Title {
